--- a/index.html
+++ b/index.html
@@ -8,15 +8,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Orpon360</span> Website</h1>
             <h3>World Class Professional Web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi rem, minima rerum ipsa totam culpa esse laboriosam. A ad expedita tempore officia culpa atque facilis aliquam vitae molestiae maxime cum, excepturi vel dolorem corporis labore quae commodi saepe accusamus dolore!</p>
+            <a class="link-button"target="_blank" href="https://www.youtube.com/c/Orpon360Gamming">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="/image/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="Middle-banner">
+        <div class="half-width">
+            <img src="/image/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About My Skill</h1>
+            <h3>MY CV DOWNLOAD</h3>
+            <p class="cv-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi rem, minima rerum ipsa totam culpa esse laboriosam. A ad expedita tempore officia culpa atque facilis aliquam vitae molestiae maxime cum, excepturi vel dolorem corporis labore quae commodi saepe accusamus dolore!</p>
+            <a class="link-button"target="_blank" href="https://www.youtube.com/c/Orpon360Gamming">Hire Me</a>
+        </div>
+        
+    </section>
+
+    <section class="experience-area">
+        <div class="half-width">
+            <h1>Full Stack Web Developer</h1>
+            <h3>2021- Present | Pro level Web Developerorpon</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit sapiente qui deserunt earum repudiandae porro incidunt inventore non. Doloremque, voluptatibus non. Quasi esse numquam, voluptatem impedit quibusdam ea magni nesciunt.</p>
+        </div>
+        <div class="half-width">
+            <h1>Baby Web Developer</h1>
+            <h3>2021- Present | Learn by Online</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit sapiente qui deserunt earum repudiandae porro incidunt inventore non. Doloremque, voluptatibus non. Quasi esse numquam, voluptatem impedit quibusdam ea magni nesciunt.</p>
         </div>
     </section>
 </body>
