--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <a class="link-button"target="_blank" href="https://www.youtube.com/c/Orpon360Gamming">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="/image/jhankar.png" alt="">
+            <img src="./image/profile.png" alt="">
         </div>
     </section>
     <section class="Middle-banner">
         <div class="half-width">
-            <img src="/image/jhankar2.png" alt="">
+            <img src="./image/profile2.png" alt="">
         </div>
         <div class="half-width">
             <h1>About My Skill</h1>
